css js images path Change

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- lightbox css -->
-    <link rel="stylesheet" href="CSS/lightbox.css" />
+    <link rel="stylesheet" href="./CSS/lightbox.css" />
 
     <!-- Font Awesome -->
     <link
@@ -24,8 +24,8 @@
     />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="CSS/responsive.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css" />
   </head>
   <body class="contact">
     <!-- Header section -->
@@ -267,7 +267,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- custom script -->
-    <script src="JS/lightbox.js"></script>
-    <script src="JS/main.js"></script>
+    <script src="./JS/lightbox.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
