--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- lightbox css -->
-    <link rel="stylesheet" href="CSS/lightbox.css" />
+    <link rel="stylesheet" href="./CSS/lightbox.css" />
 
     <!-- Font Awesome -->
     <link
@@ -24,8 +24,8 @@
     />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="CSS/responsive.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css" />
   </head>
   <body class="gallery">
     <!-- Header section -->
@@ -99,7 +99,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-1.jpg"
+              href="./images/gallery/g-1.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -113,7 +113,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-2.jpg"
+              href="./images/gallery/g-2.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -127,7 +127,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-3.jpg"
+              href="./images/gallery/g-3.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -141,7 +141,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-4.jpg"
+              href="./images/gallery/g-4.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -155,7 +155,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-5.jpg"
+              href="./images/gallery/g-5.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -169,7 +169,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-6.jpg"
+              href="./images/gallery/g-6.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -183,7 +183,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-7.jpg"
+              href="./images/gallery/g-7.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -197,7 +197,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-8.jpg"
+              href="./images/gallery/g-8.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -211,7 +211,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-1.jpg"
+              href="./images/gallery/g-1.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -316,7 +316,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- custom script -->
-    <script src="JS/lightbox.js"></script>
-    <script src="JS/main.js"></script>
+    <script src="./JS/lightbox.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
