--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- lightbox css -->
-    <link rel="stylesheet" href="CSS/lightbox.css" />
+    <link rel="stylesheet" href="./CSS/lightbox.css" />
 
     <!-- Font Awesome -->
     <link
@@ -24,8 +24,8 @@
     />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="CSS/responsive.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css" />
   </head>
   <body>
     <!-- Header section -->
@@ -473,7 +473,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-1.jpg"
+              href="./images/gallery/g-1.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -487,7 +487,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-2.jpg"
+              href="./images/gallery/g-2.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -501,7 +501,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-3.jpg"
+              href="./images/gallery/g-3.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -515,7 +515,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-4.jpg"
+              href="./images/gallery/g-4.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -529,7 +529,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-5.jpg"
+              href="./images/gallery/g-5.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -543,7 +543,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a
-              href="images/gallery/g-6.jpg"
+              href="./images/gallery/g-6.jpg"
               data-lightbox="image"
               data-title="Lemon"
             >
@@ -649,7 +649,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- custom script -->
-    <script src="JS/lightbox.js"></script>
-    <script src="JS/main.js"></script>
+    <script src="./JS/lightbox.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
